--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,367 @@
-beautifulsoup4==4.12.3
+aiodns==3.0.0
+aiohttp==3.8.3
+aiohttp-socks==0.7.1
+aiosignal==1.3.1
+alabaster==0.7.12
+altair==4.2.0
+anaconda-client==1.12.0
+anaconda-navigator==2.4.2
+anyascii==0.3.2
+anyio==3.5.0
+applaunchservices==0.3.0
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+astor==0.8.1
+astroid==2.14.2
+asttokens==2.4.1
+async-timeout==4.0.2
+atomicwrites==1.4.0
+attrs==22.1.0
+Authlib==0.15.5
+autopep8==1.6.0
+Babel==2.11.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+backports.tempfile==1.0
+backports.weakref==1.0.post1
+backports.zoneinfo==0.2.1
+base58==2.1.1
+bcrypt==4.0.1
+beautifulsoup4==4.12.2
+binaryornot==0.4.4
+bitarray==2.5.1
+black==0.0
+bleach==4.1.0
+blinker==1.4
+blis==0.4.1
+bokeh==3.0.3
+boltons==23.0.0
+Bottleneck==1.3.5
+brotlipy==0.7.0
+bs4==0.0.1
+cachetools==5.0.0
+catalogue==1.0.0
+cchardet==2.1.7
+certifi==2023.11.17
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==2.0.4
+chart-studio==1.1.0
+click==7.1.2
+cloudpickle==2.2.1
+clyent==1.2.2
+colorama==0.3.9
+comm==0.1.2
+conda==23.7.2
+conda-build==3.23.3
+conda-content-trust==0.2.0
+conda-package-handling==2.2.0
+conda_package_streaming==0.9.0
+conda-repo-cli==1.0.41
+conda-token==0.4.0
+conda-verify==3.4.2
+contourpy==1.0.5
+contractions==0.1.73
+cookiecutter==1.7.3
+cryptography==41.0.2
+cycler==0.10.0
+cymem==2.0.5
+dataclasses-json==0.5.7
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+diff-match-patch==20200713
+dill==0.3.6
+docopt==0.6.2
+docstring-to-markdown==0.11
+docutils==0.18.1
+elastic-transport==8.4.0
+elasticsearch==8.5.3
+emoji==1.7.0
+emosent-py==0.1.6
+en-core-web-lg==2.2.5
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==2.0.1
+extra-streamlit-components==0.1.60
+fake-useragent==1.1.1
+fastjsonschema==2.16.2
+filelock==3.9.0
+flake8==4.0.1
+frozenlist==1.3.3
+funcy==1.16
+future==0.18.3
+gensim==4.0.1
+geographiclib==2.0
+geopy==2.3.0
+gitdb==4.0.9
+GitPython==3.1.26
+glob2==0.7
+google-api-core==2.11.1
+google-auth==2.22.0
+google-cloud-bigquery==3.11.4
+google-cloud-core==2.3.3
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.60.0
+googletransx==2.4.2
+grpcio==1.57.0
+grpcio-status==1.57.0
+html2text==2020.1.16
+html5lib==1.1
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+inflection==0.5.1
+intervaltree==3.1.0
+ipykernel==6.19.2
+ipython==7.31.1
+ipython-genutils==0.2.0
+isort==5.9.3
+jaraco.classes==3.2.1
+jedi==0.18.1
+jellyfish==0.9.0
+Jinja2==3.1.3
+jinja2-time==0.2.0
+joblib==1.0.1
+json5==0.9.6
+jsonpatch==1.32
+jsonpointer==2.1
+jsonschema==4.17.3
+jupyter==1.0.0
+jupyter_client==8.1.0
+jupyter-console==6.4.3
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter_core==5.3.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyter-server==1.23.4
+jupyterlab==3.5.2
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.3
+jupytext==1.13.6
+keyring==23.13.1
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
+libarchive-c==2.9
+lxml==4.6.3
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+marshmallow==3.15.0
+marshmallow-enum==1.5.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.6
+mccabe==0.6.1
+mdit-py-plugins==0.3.0
+mdurl==0.1.2
+mistune==3.0.2
+more-itertools==8.12.0
+multidict==6.0.4
+multitasking==0.0.9
+murmurhash==1.0.5
+mypy-extensions==0.4.3
+navigator-updater==0.4.0
+nbclassic==0.5.5
+nbclient==0.5.13
+nbconvert==7.16.3
+nbformat==5.7.0
+nest-asyncio==1.5.6
 nltk==3.7
+notebook==6.5.2
+notebook_shim==0.2.2
+numexpr==2.7.3
+numpy==1.21.0
+numpydoc==1.5.0
+oauthlib==3.2.0
+opencv-python==4.6.0.66
+openpyxl==3.1.2
+packaging==23.0
 pandas==1.3.0
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.10.3
+pathy==0.6.0
+pexpect==4.8.0
+pg==0.1
+phantomjs==1.4.1
+pickleshare==0.7.5
+Pillow==9.4.0
+pip==23.2.1
+pip-autoremove==0.10.0
+pipreqs==0.5.0
+pkginfo==1.9.6
+pkgutil_resolve_name==1.3.10
+plac==1.1.3
+platformdirs==2.5.2
+plotly==5.2.1
+pluggy==1.0.0
+ply==3.11
+poyo==0.5.0
+preshed==3.0.5
+prometheus-client==0.14.1
+prompt-toolkit==3.0.36
+proto-plus==1.22.3
+protobuf==4.24.1
+psrecord==1.2
+psutil==5.9.0
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyahocorasick==2.0.0
+pyarrow==16.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycares==4.3.0
+pycodestyle==2.8.0
+pycosat==0.6.4
+pycparser==2.21
+pydantic==1.8.2
+pydeck==0.8.0
+pydocstyle==6.3.0
+pyflakes==2.4.0
+Pygments==2.15.1
+PyJWT==2.4.0
+pyLDAvis==3.3.1
+pylint==2.16.2
+pyls-spyder==0.4.0
+Pympler==1.0.1
+pyobjc-core==9.0
+pyobjc-framework-Cocoa==9.0
+pyobjc-framework-CoreServices==9.0
+pyobjc-framework-FSEvents==9.0
+PyOpenGL==3.1.7
+pyOpenSSL==23.2.0
+pyparsing==3.1.0
+pypdf==3.14.0
+PyPDF2==3.0.1
+pyphen==0.14.0
+PyQt5==5.12.1
+PyQt5-sip==12.11.0
+PyQtWebEngine==5.12.1
+pyrsistent==0.18.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-Levenshtein==0.12.2
+python-lsp-black==1.0.0
+python-lsp-jsonrpc==1.0.0
+python-lsp-server==1.3.3
+python-slugify==5.0.2
+python-socks==2.1.1
+python-twitter==3.5
+python-twitter-v2==0.7.6
+pytoolconfig==1.2.5
+pytz==2022.7
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzbar==0.1.9
+pyzmq==25.1.0
+QDarkStyle==3.0.2
+qstylizer==0.2.2
+QtAwesome==1.2.2
+qtconsole==5.2.2
+QtPy==2.2.0
+regex==2022.3.15
+requests==2.31.0
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+retrying==1.3.4
+rich==13.5.2
+rope==1.7.0
+rsa==4.9
+Rtree==1.0.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+schedule==1.1.0
+scikit-learn==0.24.2
+scipy==1.7.1
+seaborn==0.11.2
 selenium==3.141.0
+Send2Trash==1.8.0
+setuptools==68.0.0
+Shapely==1.7.1
+simplejson==3.17.3
+sip==6.6.2
+six==1.16.0
+sklearn==0.0
+smart-open==5.1.0
+smmap==5.0.0
+sniffio==1.2.0
+snowballstemmer==2.2.0
+snscrape==0.4.3.20220107.dev34+g5d156c6
+sortedcontainers==2.4.0
+soupsieve==2.4
+spacy==2.2.4
+spacy-legacy==3.0.8
+Sphinx==5.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+spyder==5.2.2
+spyder-kernels==2.2.1
+srsly==1.0.5
+stack-data==0.6.3
+stanfordcorenlp==3.9.1.1
 streamlit==1.33.0
+streamlit-authenticator==0.2.2
+streamlit-space==0.1.5
+streamlit-toggle==0.1.3
+streamlit-toggle-switch==1.0.2
+tabulate==0.9.0
+tenacity==8.2.3
+terminado==0.17.1
+testpath==0.6.0
+text-unidecode==1.3
+textblob==0.17.1
+textdistance==4.2.1
+textsearch==0.0.24
+textstat==0.7.3
+thinc==7.4.0
+threadpoolctl==2.2.0
+three-merge==0.1.1
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.1
+toolz==0.11.2
+tornado==6.3.2
+tqdm==4.65.0
+traitlets==5.7.1
+tweepy==4.8.0
+twint==2.1.20
+twitter==1.19.3
+typer==0.3.2
+typing_extensions==4.7.1
+typing-inspect==0.7.1
+tzdata==2021.5
+tzlocal==4.1
+ujson==5.4.0
+Unidecode==1.2.0
+urllib3==1.26.16
+validators==0.18.2
+wasabi==0.8.2
+watchdog==2.1.6
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==0.58.0
+whatthepatch==1.0.2
+wheel==0.38.4
+wordcloud==1.8.1
+wordnet==0.0.1b2
+wrapt==1.14.1
+wurlitzer==3.0.2
+xyzservices==2022.9.0
+yapf==0.31.0
+yarg==0.1.9
+yarl==1.8.2
+yfinance==0.1.62
+zbar-py==1.0.4
+zipp==3.11.0
+zstandard==0.19.0
