--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 altair==5.3.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.3
 certifi==2024.2.2
@@ -7,6 +8,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 gitdb==4.0.11
 GitPython==3.1.43
+google==3.0.0
 idna==3.7
 importlib_resources==6.4.0
 Jinja2==3.1.3
@@ -32,6 +34,7 @@ rich==13.7.1
 rpds-py==0.18.0
 six==1.16.0
 smmap==5.0.1
+soupsieve==2.5
 streamlit==1.33.0
 tenacity==8.2.3
 toml==0.10.2
