--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ click==8.1.7
 gitdb==4.0.11
 GitPython==3.1.43
 google==3.0.0
+google-auth==2.29.0
+google-cloud==0.34.0
 idna==3.7
 importlib_resources==6.4.0
 Jinja2==3.1.3
@@ -24,6 +26,8 @@ pillow==10.3.0
 pkgutil_resolve_name==1.3.10
 protobuf==4.25.3
 pyarrow==16.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydeck==0.8.1b0
 Pygments==2.17.2
 python-dateutil==2.9.0.post0
@@ -32,6 +36,7 @@ referencing==0.34.0
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+rsa==4.9
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.5
