--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,16 @@ click==8.1.7
 gitdb==4.0.11
 GitPython==3.1.43
 google==3.0.0
+google-api-core==2.18.0
 google-auth==2.29.0
 google-cloud==0.34.0
+google-cloud-bigquery==3.21.0
+google-cloud-core==2.4.1
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
+grpcio==1.62.2
+grpcio-status==1.62.2
 idna==3.7
 importlib_resources==6.4.0
 Jinja2==3.1.3
@@ -24,6 +32,7 @@ packaging==24.0
 pandas==2.0.3
 pillow==10.3.0
 pkgutil_resolve_name==1.3.10
+proto-plus==1.23.0
 protobuf==4.25.3
 pyarrow==16.0.0
 pyasn1==0.6.0
